fixed alignment of dots

--- a/styles.css
+++ b/styles.css
@@ -76,8 +76,8 @@ p {
 
 button.slide {
   position: relative;
-  left: 24em;
-  top: 0em;
+  left: 44em;
+  top: 42em;
   margin-right: 15px;
   background: rgb(218, 123, 34);
   border: 0;
